--- a/contact style.css
+++ b/contact style.css
@@ -116,7 +116,7 @@
     margin:0px auto;
     text-align: center;
      display: flex;
-     min-width: 1200px;
+    
    gap :30px;
  
    justify-content: center;
@@ -222,4 +222,47 @@ flex-wrap: nowrap;
     transition:all 0.3s ease;
     transform: translateY(-3px);
 }
+@media (max-width:767px){
+
+ .contact-wrapper{
+    
+   
+    text-align: center;
+     display: flex;
+ margin: 0px auto;
+   gap:20px;
+   justify-content: center;
+  align-items: left;
+   flex-direction: column;
+    background-image: url(images/City.jpg);
+    background-repeat: no-repeat;
+    width:100%;
+    min-height: 100vh;
+   
+}
+.contact-content{
+    display:flex;
+    text-align: center;
+   flex-direction: column;
+    gap:20px;
+    font-size: 10px;
+    margin-top: 40px;
+}
+  .contact-header{
+    max-width: 600px;
+    margin-top: 80px;
+    text-align: center;
+
+   }
+   .social-section h3{
+  margin-bottom: 20px;
+font-weight: 600;
  
+
+}
+.social-section a i{
+text-align: left;
+margin-bottom: 20px;
+}
+
+}
