--- a/contact style.css
+++ b/contact style.css
@@ -239,6 +239,24 @@ background: linear-gradient(135deg, #0F2C59 0%, #1A4B8C 100%);
 .contact-header{
    padding-top: 220px;
 }
+.contact-header h2{
+  font-size: 20px;
+}
+.contact-header p{
+ font-size: 17px;
+  
+}
+.location-info h3{
+  font-size: 20px;
+}
+.location-info p{
+  font-size: 17px;
+}
+  
+ 
+.social-section h3{
+   font-size: 20px;
+}
   .navlinks {
     display: none;
     width: 100%;
