--- a/soft.css
+++ b/soft.css
@@ -310,10 +310,18 @@ object-fit: cover;
              min-width:390px;
             position: relative;
              right:0%;
+             font-size:20px;
            }
-
+.service-header p{
+    font-size: 20px;
+}
+.service-header h2{
+    font-size: 20px;
+}
             .service-content h3{
                 padding-left: 10px;
+               
+               
             
             }
             .service-content p{
@@ -326,7 +334,7 @@ object-fit: cover;
             .service-wrapper{
                 max-width:100%;
                 margin-bottom: 0px;
-                padding-top: 90px;
+                padding-top: 70px;
             }
             .image img{
                 width:100%;
